# cpass

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  build.rs  bun.lockb  docker-compose.prod.yaml  docker-compose.yaml  package.json  stack.prod.yaml
.scripts/: run_all.sh
.sqlx/: query-002b7a32bcfbede211d3b8b27b113fe1358e67a63a11848ede49352fb589864b.json  query-00397ab2c8d19c04e6982967395c65ac0caa76a0e57668dce5f790683ef67a31.json  query-0520efc4a3a43bc2708ef6b6a129f0f4b3efcb9d3abe585edc889ae2557aadc0.json  query-101b1ce4c3bca04ce56fab7e71fbfc15e1ef47a2af7d8e6049f1e28492b516a3.json  query-16df4d77544bb9fe9af7086ab3409341026d4134b7572c2b36a5bddebe8fc229.json  query-1f97fcf641c7a45f7723035b780eff458f77d1d9bd0682a783fe20368d29498f.json  query-23ffa21bdfad5bb144bb0db7b95d3cccd6590acb10b16fee8c6ad280aa459512.json  query-2f90f3ea3f097c5c07f3ed933beb50109cdf6223ad3a6f561c1bf702c61ad3be.json  query-315d9f7d2ecbc7edee0aaa443a1e00e21e74a1ff4cc22a567e43b7e77e61b922.json  query-364b58ed2c2d77fd76d46b1797e3836064997a81df9e8a6fe4d14f43f8fe14b1.json  query-521f34c68d49578c023faeb2245b6229c1d6a715fbc9db5bdb43ada23d0a9f12.json  query-5b080c937865b05f14354c010281f05ffba106df11a7a10269de5d38b947b643.json  query-5dac4274770e97614351152e46d45479251f103c165bea6e8d9718832f57df92.json  query-6db770653bc1807295bb53f3813d517c8ccb6696c6a28c40d7cf3d1a2aea2215.json  query-826f056eaf4eaa78219d2502430fc918d22705e65b2eea367a521b4eb2a5dc77.json  query-89288907940e11deb6e1d2fd0cad4b8da4db3b899ae9e08c00079a2caab156a8.json  query-8c47604abfd160f4816444a68b650b2f6c46eb619541bf5abc73fee85eb8248d.json  query-9cee4a83be6c31ef2b145fc9b686daf1b9abc7f62a5cd1d4078ec69892d40fbc.json  query-9e0876d8c746fb130bdab9f415a9a51814df8d025ea562cc431472fbeed097b6.json  query-a33269b503201c7b143d5021b00865313371aa0b44a006a0faf42a5b08942e0e.json  query-aa329ec0cdb380906c291be0b99c0c4ae40419146d5202507cec9876b545216c.json  query-aedaafb084fe39dd7cd1a34e932cff8211cd1311572817f539bd42c48fb79408.json  query-b85151b72287f7f6a63a4c6b6aeb732ac520405471abee29da8715ef62957f73.json  (+10 more)
backend/: .gitignore  (+3 more)
backend/auth/: Cargo.toml
backend/auth/src/: routers.rs  structs.rs  utils.rs
(+101 files in other folders)
