[package]
name = "cpass"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
getrandom = "0.2.12"
rust-argon2 = "2.1.0"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["full"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
strip = true
