[package]
name = "cpass"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/grpc_main.rs"
name = "grpc"

[[bin]]
path = "src/http_main.rs"
name = "http"

[features]
swagger = []

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.83"
async-trait = "0.1.80"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
prost = { version = "0.13.1", features = ["prost-derive"] }
rand = "0.8.5"
ring = "0.17.8"
rust-argon2 = "2.1.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "uuid", "runtime-tokio"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.12.0"
tonic-reflection = "0.12.0"
tonic_include_protos = "0.1.2"
tower-http = { version = "0.5.2", features = ["compression-full", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "4.2.3", features = ["uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.12.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
