[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
jsonwebtoken = "9.3.0"
ring = "0.17.8"
rust-argon2 = "2.1.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "uuid", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
